--- a/t1_java/src/main/resources/application.yml
+++ b/t1_java/src/main/resources/application.yml
@@ -65,6 +65,8 @@ t1:
       client_registration: t1_demo_client_registration
       client_id_registered: t1_demo_client_registered
       client_transactions: t1_demo_client_transactions
+      accounts: t1_demo_accounts
+      transactions: t1_demo_transactions
     listener:
       poll-timeout: 1000
 
