--- a/t1_java/pom.xml
+++ b/t1_java/pom.xml
@@ -161,6 +161,22 @@
             <artifactId>micrometer-jvm-extras</artifactId>
             <version>0.2.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.wiremock/wiremock -->
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>3.9.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>12.0.12</version> <!-- Добавьте зависимость для Jetty 11 -->
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.google.guava</groupId>
